objects/Test_Scenario__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents a test situation that verifies the fulfillment of a request.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments on test scenario</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enables users to provide commentary during reviews of test scenarios</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of test scenario</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <description>Functional area of test scenario</description>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code</fullName>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related release of test scenario</description>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Test Scenarios</relationshipLabel>
        <relationshipName>Test_Scenarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It allows users to create Test Scenarios directly at request level to make testing flow more logical and create better traceability</description>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Test Scenarios</relationshipLabel>
        <relationshipName>Test_Scenarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of test scenario</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Test_Scripts__c</fullName>
        <description>Number of test scripts for the test scenario</description>
        <label># of Test Scripts</label>
        <summaryForeignKey>Test_Script__c.Test_Scenario__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Test Scenario</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0}</displayFormat>
        <label>Test Scenario ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>